Fix sizing issues in explorer, overflow and meanprofile margins

--- a/public/css/explorer/chartpanel.css
+++ b/public/css/explorer/chartpanel.css
@@ -3,8 +3,8 @@
   border-top: none;
 }
 
-.chart-panel {
-  /* position: relative; */
+.chart-perspective-column {
+  overflow: auto;
 }
 
 .chart-scroll {
